# ee2e-chat-app

./: .gitignore  .gitmodules  LICENSE  README.md
.github/workflows/: main.yml
App/: capacitor.config.ts  ionic.config.json  package-lock.json  package.json
App/public/: index.html  manifest.json
App/src/: App.tsx  index.tsx  service-worker.ts
App/src/components/: chatMessage.tsx  contactEntry.tsx  protectedRoute.tsx  serverEntry.tsx
App/src/helpers/: handler.tsx  settings.tsx  socket.tsx  socketHook.tsx  store.tsx  toastController.tsx  types.tsx
App/src/helpers/classes/: chat.tsx
App/src/pages/: serverList.tsx
App/src/pages/authentication/: authentication.tsx  helpers.tsx  login.tsx  reducer.tsx  types.tsx
App/src/pages/chat/: chat.tsx  verify.tsx
App/src/pages/chats/: chats.tsx
App/src/pages/contacts/: contacts.tsx
App/src/pages/settings/: settings.tsx
App/src/pages/splash/: splash.css  splash.tsx
Backend/: .gitignore  CMakeLists.txt  CMakePresets.json  log.txt  vcpkg.json
Backend/ChatBackend/: CMakeLists.txt  ChatBackend.cpp  ChatBackend.h
Backend/ChatBackend/Certs/: cert.pem  key.pem
Backend/ChatBackend/Database/: Database.cpp  Database.h  Types.h
Backend/ChatBackend/Debug/: Debug.cpp  Debug.h
Backend/ChatBackend/Handlers/: Handlers.h  Login.h  Notifications.h  Register.h  Relay.h  UsernameCheck.h  WebAuthN.h
Backend/ChatBackend/Notifications/: Notifications.cpp  Notifications.h  Vapid.h
Backend/ChatBackend/Socket/: Socket.cpp  Socket.h
Backend/ChatBackend/Tests/: Argon2.Tests.cpp  Crypto.Tests.cpp  ECE.Tests.cpp  Misc.Tests.cpp  Vapid.Tests.cpp
Backend/ChatBackend/Types/: Types.h
Backend/ChatBackend/Utils/: Argon2.h  Crypto.h  Http.h  Misc.h  Pinger.h  Utils.cpp  Utils.h  WebAuthN.h
Backend/DummyClient/: Alex.cpp  Alex.h  CMakeLists.txt  Main.cpp  Socket.cpp  Socket.h
Backend/LookupServer/: CMakeLists.txt  LookupServer.cpp  LookupServer.h
Backend/LookupServer/Certs/: cert.pem  key.pem
Backend/LookupServer/ServerList/: ServerList.cpp  ServerList.h
Backend/Tests/: CMakeLists.txt
Backend/Tests/Hashing/: hash.cpp  verifyHash.cpp  verifyHashFail.cpp
Backend/cert/: private.pem  public.pem
Misc/Postman Tests/: Chat Backend (HTTP).postman_collection.json  Lookup Server.postman_collection.json
Misc/SQL Statements/: createTables.sql
